--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -9,8 +9,7 @@
     <string name="input_method">系统输入法切换</string>
     <string name="experienced_device">开发测试装置</string>
     <string name="license">版权声明</string>
-    <string name="license_detail">LIME-HD 是一个输入法框架程式，旨在提供 Android 装置中文输入法程式。\n组织或个人由网路自行下载之输入法字根及字典档案若有版权上的争议，请自行向原作者取得授权，本程式不负担其所产生的任何法律及版权上的责任。\n完整资讯请参考 LIME Project 网站上的版权说明  http://code.google.com/p/limeime/。</string>
-
+	<string name="license_detail">LIME-HD 是一个输入法框架程式，旨在提供 Android 装置中文输入法程式。\n组织或个人由网路自行下载之输入法字根及字典文档若有版权上的争议，请自行向原作者取得授权，本程式不负担其所产生的任何法律及版权上的责任。\n完整资讯请参考 LIME Project 网站上的版权说明  http://code.google.com/p/limeime/。</string>
 
     <!-- Symbols that are commonly considered word separators in this language -->
     <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
@@ -24,12 +23,12 @@
     
     
     <!-- LIME Loading -->
-    <string name="lime_setting_btn_load_local_notice">请选择 .LIME 或 .CIN 档案</string>
+    <string name="lime_setting_btn_load_local_notice">请选择 .LIME 或 .CIN 文档</string>
     <string name="lime_setting_loading">载入对应档</string>
     <string name="lime_setting_select_root"> - back to /</string>
     <string name="lime_setting_select_parent"> - back to ..</string>
     
-    <string name="lime_setting_notification_loading">准备资料汇入</string>
+    <string name="lime_setting_notification_loading">准备数据汇入</string>
     <string name="lime_setting_notification_failed">记录汇入失败</string>
     <string name="lime_setting_notification_finish">记录汇入成功</string>
     <string name="lime_setting_notification_related">开始建立关联字</string>
@@ -40,8 +39,9 @@
       
     <!-- TAB -->
     <string name="lime_setting_db">对应表管理</string>
-    <string name="lime_setting_preference">喜好设定</string>
+    <string name="lime_setting_preference">喜好设定</string>   
     <string name="lime_setting_bluetooth">蓝牙键盘</string>
+    
     
     <!-- Preference -->
     <string name="keyboard">键盘</string>
@@ -50,15 +50,16 @@
        
     <string name="keyboard_list">LIME输入法切换</string>
     
-    
     <string name="default_in_english">先使用英文模式</string>
     <string name="default_in_english_summary">输入法开启后先使用英文输入模式.</string>
+    <string name="number_row_in_english">数字列英文键盘</string>
+    <string name="number_row_in_english_summary">在英文键盘显示数字列(5列键盘)</string>
     
     <string name="three_rows_remapping">3排键盘重对应</string>
     <string name="three_rows_remapping_summary">对应 1234567890-;至 qwertyuiopv.</string>
     
-    <string name="physical_keyboard">实验键盘选项</string>
-    <string name="phyonetic_keyboard">注音键盘选项</string>
+    <string name="physical_keyboard">实体键盘选项</string>
+    <string name="phonetic_keyboard">注音键盘选项</string>
     
     <string name="prediction_category">英文关联字设定</string>
     <string name="auto_cap">首字自动大写</string> 
@@ -71,8 +72,6 @@
     <string name="im">输入法</string>
     <string name="enable_english_dictionary">启用英文字典</string>
     <string name="enable_english_dictionary_summary">当使用 英文 输入模式时，显示英文建议字</string>
-    <string name="number_row_in_english">数字列英文键盘</string>
-    <string name="number_row_in_english_summary">在英文键盘显示数字列(5列键盘)</string>
     <string name="enable_english_dictionary_physical_keyboard">实体键盘启用英文字典</string>
     <string name="enable_english_dictionary_physical_keyboard_summary">实体键盘使用英文输入模式时，显示英文建议字</string>
     <string name="im_reverse_lookup_list">输入法字根反查</string>
@@ -84,9 +83,12 @@
     <string name="ez_reverse_lookup_list">轻松字根反查</string>
     <string name="array_reverse_lookup_list">行列字根反查</string>
     <string name="array10_reverse_lookup_list">行列10字根反查</string>
+    <string name="cj5_reverse_lookup_list">仓颉五字根反查</string>
+    <string name="ecj_reverse_lookup_list">速成字根反查</string>
+    <string name="wb_reverse_lookup_list">五笔字根反查</string>
     
     <string name="han_convert_option_list">中文简/繁体字码转换</string>
-        <string name="selkey_option_list">选字项选项</string>
+    <string name="selkey_option_list">选字键选项</string>
     
     
     <string name="table_list">对应表选取</string>
@@ -102,9 +104,9 @@
     <string name="candidate_suggestion">启动自建关联字</string>
     <string name="candidate_suggestion_summary">依输入文字自动建立关联字</string>
     <string name="learning_switch">启动选取排序</string>
-    <string name="learning_switch_summary">依选取次数排序文字清单</string>
-    <string name="physical_keyboard_sort">启动实体键盘选取排</string>
-    <string name="physical_keyboard_sort_summary">使用实体键盘时依选取次数排序文字清单</string>
+    <string name="learning_switch_summary">依选取次数排序选字清单</string>
+    <string name="physical_keyboard_sort">启动实体键盘选取排序</string>
+    <string name="physical_keyboard_sort_summary">使用实体键键时依选取次数排序选字清单</string>
     <string name="accept_number_index">启动数字对应</string>
     <string name="accept_number_index_summary">允许使用数字为输入法字根</string>
     <string name="accept_symbol_index">启动符号对应</string>
@@ -194,82 +196,6 @@
 		<item>第一选字键选第二顺位中文字</item>
 	</string-array>
 	
-    <!-- IM Reverse Lookup List -->  
-    <string-array name="im_reverse_lookup">
-		<item>无</item>
-		<item>自建</item>
-		<item>仓颉</item>
-		<item>快仓</item>
-		<item>大易</item>
-		<item>注音</item>
-		<item>轻松</item>
-		<item>行列</item>
-		<item>行列10</item>
-	</string-array>
-	<string-array name="im_reverse_lookup_codes">
-		<item>none</item>
-		<item>custom</item>
-		<item>cj</item>
-		<item>scj</item>
-		<item>dayi</item>
-		<item>phonetic</item>
-		<item>ez</item>
-		<item>array</item>
-		<item>array10</item>
-	</string-array>
-    <!-- Keyboard Selection List -->
-    <string-array name="keyboard">
-		<item>LIME输入法</item>
-		<item>仓颉输入法</item>
-		<item>快仓输入法</item>
-		<item>大易输入法</item>
-		<item>注音输入法</item>
-		<item>轻松输入法</item>
-		<item>行列输入法</item>
-		<item>行列10输入法</item>
-	</string-array>
-	<string-array name="keyboard_defaultstate">
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-		<item>true</item>
-	</string-array>
-    <string-array name="keyboard_codes">
-		<item>custom</item>
-		<item>cj</item>
-		<item>scj</item>
-		<item>dayi</item>
-		<item>phonetic</item>
-		<item>ez</item>
-		<item>array</item>
-		<item>array10</item>
-	</string-array>
-	<string-array name="table_codes">
-		<item>custom</item>
-		<item>cj</item>
-		<item>scj</item>
-		<item>dayi</item>
-		<item>phonetic</item>
-		<item>ez</item>
-		<item>array</item>
-		<item>array10</item>
-		<item>related</item>
-		<item>dictionary</item>
-	</string-array>
-    
-    <string-array name="similiar_codes">
-		<item>0</item>
-		<item>10</item>
-		<item>20</item>
-		<item>30</item>
-		<item>40</item>
-		<item>50</item>
-	</string-array>
-	
 	<!-- Physical keyboard options List -->
 	<string-array name="physical_keyboard_options">
 		<item>一般键盘</item>
@@ -286,16 +212,113 @@
 		<item>许氏</item>
 	</string-array>
 	
-	<!-- Table Selection list -->
-	<string-array name="table">
-		<item>自建/电话</item>
+    <!-- IM Reverse Lookup List -->  
+    <string-array name="im_reverse_lookup">
+		<item>无</item>
+		<item>自建</item>
 		<item>仓颉</item>
 		<item>快仓</item>
+		<item>仓颉五</item>
+		<item>速成</item>
 		<item>大易</item>
 		<item>注音</item>
 		<item>轻松</item>
 		<item>行列</item>
 		<item>行列10</item>
+		<item>五笔</item>
+	</string-array>
+	<string-array name="im_reverse_lookup_codes">
+		<item>none</item>
+		<item>custom</item>
+		<item>cj</item>
+		<item>scj</item>
+		<item>cj5</item>
+		<item>ecj</item>
+		<item>dayi</item>
+		<item>phonetic</item>
+		<item>ez</item>
+		<item>array</item>
+		<item>array10</item>
+		<item>wb</item>
+	</string-array>
+    <!-- Keyboard Selection List -->
+    <string-array name="keyboard">
+		<item>LIME输入法</item>
+		<item>仓颉输入法</item>
+		<item>快仓输入法</item>
+		<item>仓颉五输入法</item>
+		<item>速成输入法</item>
+		<item>大易输入法</item>
+		<item>注音输入法</item>
+		<item>轻松输入法</item>
+		<item>行列输入法</item>
+		<item>行列10输入法</item>
+		<item>五笔输入法</item>
+	</string-array>
+	<string-array name="keyboard_defaultstate">
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+	</string-array>
+    <string-array name="keyboard_codes">
+		<item>custom</item>
+		<item>cj</item>
+		<item>scj</item>
+		<item>cj5</item>
+		<item>ecj</item>
+		<item>dayi</item>
+		<item>phonetic</item>
+		<item>ez</item>
+		<item>array</item>
+		<item>array10</item>
+		<item>wb</item>
+	</string-array>
+	<string-array name="table_codes">
+		<item>custom</item>
+		<item>cj</item>
+		<item>scj</item>
+		<item>cj5</item>
+		<item>ecj</item>
+		<item>dayi</item>
+		<item>phonetic</item>
+		<item>ez</item>
+		<item>array</item>
+		<item>array10</item>
+		<item>wb</item>
+		<item>related</item>
+		<item>dictionary</item>
+	</string-array>
+    
+    <string-array name="similiar_codes">
+		<item>0</item>
+		<item>10</item>
+		<item>20</item>
+		<item>30</item>
+		<item>40</item>
+		<item>50</item>
+	</string-array>
+	
+	<!-- Table Selection list -->
+	<string-array name="table">
+		<item>自建/电话</item>
+		<item>仓颉</item>
+		<item>快仓</item>
+		<item>仓颉五</item>
+		<item>速成</item>
+		<item>大易</item>
+		<item>注音</item>
+		<item>轻松</item>
+		<item>行列</item>
+		<item>行列10</item>
+		<item>五笔</item>
 		<item>预载关联字</item>
 		<item>英文字典</item>
 	</string-array>
@@ -305,24 +328,27 @@
     
     <string name="l3_tab_initial">初始数据库</string>
     <string name="l3_tab_initial_error">下载失败，请确认装置已连上网路.</string>
-    <string name="l3_tab_initial_message">请点选 [预载数据库] OR [空白数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份档案中还原</string>
+    <string name="l3_tab_initial_message">请点选 [预载数据库] OR [空白数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份文档中还原</string>
     <string name="l3_initial_btn_load_empty_db">空白数据库</string>
     <string name="l3_initial_btn_load_preload_db">预载数据库</string>
     <string name="l3_initial_btn_reset_db">重置数据库</string>
     <string name="l3_initial_btn_store_to_sdcard">请问您要变更数据库的储存位置至 SDCARD 吗? 在部份机种上可能会产生效能不佳的问题。</string>
     <string name="l3_initial_btn_store_to_device">请问您要变更数据库的储存位置至装置吗? </string>
-    <string name="l3_initial_btn_store_device">装置空间</string>
+     <string name="l3_initial_btn_store_device">装置空间</string>
     <string name="l3_initial_btn_store_sdcard">SDCARD</string>
     
     <string name="l3_tab_manage">输入法管理</string>
     <string name="l3_manage_default">自建</string>
     <string name="l3_manage_phonetic">注音</string>
     <string name="l3_manage_cj">仓颉</string>
+    <string name="l3_manage_cj5">仓颉五</string>
+    <string name="l3_manage_ecj">速成</string>
     <string name="l3_manage_scj">快仓</string>
     <string name="l3_manage_dayi">大易</string>
     <string name="l3_manage_eazy">轻松</string>
     <string name="l3_manage_array">行列</string>
     <string name="l3_manage_array10">行列10</string>
+    <string name="l3_manage_wb">五笔</string>
     
     <string name="l3_tab_preference">喜好设定</string>
     
@@ -335,14 +361,14 @@
     <string name="l3_message_database_reset_confirm">您是否要移除数据库?</string>
     <string name="l3_message_table_reset_confirm">您是否要清除所有记录?</string>
     <string name="l3_initial_download_database">下载数据库</string>
-    <string name="l3_initial_download_failed">资料转换错误, 请重置数据库再重新下载!</string>
+    <string name="l3_initial_download_failed">数据转换错误, 请重置数据库再重新下载!</string>
     <string name="l3_initial_backup_database">备份数据库</string>
     <string name="l3_initial_backup_start">开始备份数据库</string>
     <string name="l3_initial_backup_end">数据库备份完成</string>
     <string name="l3_initial_backup_confirm">您是否要备份数据库?</string>
     <string name="l3_initial_backup_error">数据库不存在，无法进行备份.</string>
     <string name="l3_initial_restore_database">还原数据库</string>
-    <string name="l3_initial_restore_error">备份档案不存在，无法进行还原.</string>
+    <string name="l3_initial_restore_error">备份文档不存在，无法进行还原.</string>
     <string name="l3_initial_restore_confirm">您是否要还原数据库?</string>
     <string name="l3_initial_restore_start">开始还原数据库</string>
     <string name="l3_initial_restore_end">数据库还原完成</string>
@@ -372,6 +398,14 @@
     <string name="l3_im_download_from_cj_start">开始下载仓颉字根</string>
     <string name="l3_im_download_from_cj_install">开始安装仓颉字根</string>
     
+    <string name="l3_im_download_from_cj5">下载并安装仓颉五字根</string>
+    <string name="l3_im_download_from_cj5_start">开始下载仓颉五字根</string>
+    <string name="l3_im_download_from_cj5_install">开始安装仓颉五字根</string>
+    
+    <string name="l3_im_download_from_ecj">下载并安装速成字根</string>
+    <string name="l3_im_download_from_ecj_start">开始下载速成字根</string>
+    <string name="l3_im_download_from_ecj_install">开始安装速成字根</string>
+    
     <string name="l3_im_download_from_scj">下载并安装快仓字根</string>
     <string name="l3_im_download_from_scj_start">开始下载快仓字根</string>
     <string name="l3_im_download_from_scj_install">开始安装快仓字根</string>
@@ -381,14 +415,19 @@
     <string name="l3_im_download_from_array_install">开始安装老刀行列字根</string>
     
     <string name="l3_im_download_from_array10">下载并安装老刀行列10字根</string>
-    <string name="l3_im_download_from_array10_start">开始下载老刀行列10字根</string>
+    <string name="l3_im_download_from_array10_start">开始老刀下载行列10字根</string>
     <string name="l3_im_download_from_array10_install">开始安装老刀行列10字根</string>
     
     <string name="l3_im_download_from_ez">下载并安装轻松字根</string>
     <string name="l3_im_download_from_ez_start">开始下载轻松字根</string>
     <string name="l3_im_download_from_ez_install">开始安装轻松字根</string>
     
+    <string name="l3_im_download_from_wb">下载并安装五笔字根</string>
+    <string name="l3_im_download_from_wb_start">开始下载五笔字根</string>
+    <string name="l3_im_download_from_wb_install">开始安装五笔字根</string>
+    
     <string name="l3_tab_bluetooth">蓝牙设定</string>
+    <string name="l3_im_notice">为了节省记忆体使用空间，我们强烈建议您清空不常使用的输入法字根，或使用空白资料库来载入个别输入法字根档。</string>
     
     <!-- AD Message -->
     <string name="ad_zippy">蓝芽键盘测试支援\nZIPPY BT-540 蓝芽一对六键盘 - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
