--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -355,7 +355,7 @@
 	<string name="l3_dbservice_download_start">正在取得预载数据库, 这一个动作会持续一至数分钟，请您耐心等候.</string>
 	<string name="l3_dbservice_download_start_empty">正在取得空白数据库, 这一个动作会持续一至数分钟，请您耐心等候.</string>
     <string name="l3_dbservice_download_initial">正在初始化数据库.</string>
-    <string name="l3_dbservice_download_loaded">预载数据库已成功载入.</string>
+    <string name="l3_dbservice_download_loaded">数据库已成功载入.</string>
     <string name="l3_dbservice_download_convert">输入法进行转换中...</string>
     
     <string name="l3_message_database_reset_confirm">您是否要移除数据库?</string>
