--- a/branches/limehd/res/values-zh-rTW/strings.xml
+++ b/branches/limehd/res/values-zh-rTW/strings.xml
@@ -355,7 +355,7 @@
 	<string name="l3_dbservice_download_start">正在取得預載資料庫, 這一個動作會持續一至數分鐘，請您耐心等候.</string>
 	<string name="l3_dbservice_download_start_empty">正在取得空白資料庫, 這一個動作會持續一至數分鐘，請您耐心等候.</string>
     <string name="l3_dbservice_download_initial">正在初始化資料庫.</string>
-    <string name="l3_dbservice_download_loaded">預載資料庫已成功載入.</string>
+    <string name="l3_dbservice_download_loaded">資料庫已成功載入.</string>
     <string name="l3_dbservice_download_convert">輸入法進行轉換中...</string>
     
     <string name="l3_message_database_reset_confirm">您是否要移除資料庫?</string>
