--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -363,6 +363,7 @@
     <string name="l3_tab_manage">Manage IM</string>
     <string name="l3_manage_default">Custom</string>
     <string name="l3_manage_phonetic">Phonetic</string>
+    <string name="l3_manage_phonetic_adv">Phonetic Adv</string>
     <string name="l3_manage_cj">Changjei</string>
     <string name="l3_manage_scj">SChangjei</string>
     <string name="l3_manage_cj5">Changjei5</string>
@@ -383,6 +384,7 @@
     
     <string name="l3_message_database_reset_confirm">Would you like to reset this database?</string>
     <string name="l3_message_table_reset_confirm">Would you like to remove all records?</string>
+    <string name="l3_message_table_download_confirm">Would you like to download the file?</string>
     <string name="l3_initial_download_database">Download Preloaded Database</string>
     <string name="l3_initial_download_failed">Database convert failed, please reset database and try again.</string>
     <string name="l3_initial_backup_database">Backup Database</string>
@@ -415,6 +417,11 @@
     <string name="l3_im_download_from_phonetic">Download/Install OpenVanilla Phonetic</string>
     <string name="l3_im_download_from_phonetic_start">Start download OpenVanilla Phonetic</string>
     <string name="l3_im_download_from_phonetic_install">Start Install OpenVanilla Phonetic</string>
+    
+    <string name="l3_im_download_from_phonetic_adv">Download/Install Phonetic Advance</string>
+    <string name="l3_im_download_from_phonetic_adv_start">Start Download Phonetic Advance</string>
+    <string name="l3_im_download_from_phonetic_adv_install">Start Install Phonetic Advance</string>
+    <string name="l3_im_download_from_phonetic_adv_warning">File size is big, so it will take several minutes to finish the import task.</string>
     
     <string name="l3_im_download_from_cj">Download/Install CJ</string>
     <string name="l3_im_download_from_cj_start">Start download CJ</string>
