--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -28,15 +28,16 @@
     <string name="lime_setting_select_root"> - back to /</string>
     <string name="lime_setting_select_parent"> - back to ..</string>
     <string name="lime_loading">Loading ...</string>
+    <string name="lime_loading_cancel">Cancel</string>
     
     <string name="lime_setting_notification_loading">Start Loading Mapping Table</string>
     <string name="lime_setting_notification_failed">Mapping Import Failed !!</string>
     <string name="lime_setting_notification_finish">Mapping Import Finished</string>
     <string name="lime_setting_notification_related">Start Building Related Words</string>
     <string name="lime_setting_notification_loading_start">LIME</string>
-    <string name="lime_setting_notification_loading_end">Loaded</string>
-    <string name="lime_setting_notification_loading_build">Build</string>
-    <string name="lime_setting_notification_loading_import">Mapping</string>
+    <string name="lime_setting_notification_loading_end">mappings loaded.</string>
+    <string name="lime_setting_notification_loading_build">Building </string>
+    <string name="lime_setting_notification_loading_import">IM-table: </string>
       
     <!-- TAB -->
     <string name="lime_setting_db">Mapping DB</string>
@@ -349,14 +350,14 @@
 	<!-- Version 3 String Set -->
     <string name="l3_message_initial_required">Please initialize the LIME database.</string>
     
-    <string name="l3_tab_initial">Initial DB</string>
+    <string name="l3_tab_initial">Manage DB</string>
     <string name="l3_tab_initial_error">Internet connection not available.</string>
-    <string name="l3_tab_initial_message">Please click [Preload/Empty Database] to download lime database or restore from previous backup by [Restore Database] function.</string>
-    <string name="l3_initial_btn_load_empty_db">Empty Database</string>
-    <string name="l3_initial_btn_load_preload_db">Preload Database</string>
-    <string name="l3_initial_btn_reset_db">Reset Database</string>
-    <string name="l3_initial_btn_store_to_sdcard">Would you like to store Database on sdcard? this might result in performance issue for some devices.</string>
-    <string name="l3_initial_btn_store_to_device">Would you like to store Database on device?</string>
+    <string name="l3_tab_initial_message">Please initialized lime database using by downloading preloaded or blank lime database or restore from last backup.</string>
+    <string name="l3_initial_btn_load_empty_db">INIT DB (blank))</string>
+    <string name="l3_initial_btn_load_preload_db">INIT DB (preloaded)</string>
+    <string name="l3_initial_btn_reset_db">Reset DB</string>
+    <string name="l3_initial_btn_store_to_sdcard">Are you sure you want to store database on sdcard? this might result in performance issue for some devices.</string>
+    <string name="l3_initial_btn_store_to_device">Are you sure you want to store database on device?</string>
     <string name="l3_initial_btn_store_device">DEVICE</string>
     <string name="l3_initial_btn_store_sdcard">SDCARD</string>
     
@@ -376,87 +377,88 @@
     
     <string name="l3_tab_preference">Preference</string>
 	
-    <string name="l3_dbservice_download_start">Download preloaded database, this action will take few minutes please wait.</string>
-    <string name="l3_dbservice_download_start_empty">Download empty database, this action will take few minutes please wait.</string>
+	<string name="l3_dbservice_download_start">Downloading preloaded database... It takes few minutes, please wait...</string>
+    <string name="l3_dbservice_download_start_empty">Downloading blank database... It takes few minutes, please wait...</string>
     <string name="l3_dbservice_download_initial">Initialize database.</string>
-    <string name="l3_dbservice_download_loaded">Database was loaded.</string>
-    <string name="l3_dbservice_download_convert">Start convert database file...</string>
+    <string name="l3_dbservice_download_loaded">Database successfully loaded.</string>
+    <string name="l3_dbservice_download_convert">Loading the database file...</string>
     
-    <string name="l3_message_database_reset_confirm">Would you like to reset this database?</string>
-    <string name="l3_message_table_reset_confirm">Would you like to remove all records?</string>
-    <string name="l3_message_table_download_confirm">Would you like to download the file?</string>
-    <string name="l3_initial_download_database">Download Preloaded Database</string>
-    <string name="l3_initial_download_failed">Database convert failed, please reset database and try again.</string>
-    <string name="l3_initial_backup_database">Backup Database</string>
-    <string name="l3_initial_backup_start">Start backup lime database</string>
-    <string name="l3_initial_backup_end">Backup Finished!</string> 
-    <string name="l3_initial_backup_confirm">Would like to backup database?</string>
-    <string name="l3_initial_backup_error">You don&quot;t have database need to be backup.</string>
-    <string name="l3_initial_restore_database">Restore Database</string>
-    <string name="l3_initial_restore_error">You don&quot;t have a backup can be restore.</string>
-    <string name="l3_initial_restore_start">Start restore lime database</string>
-    <string name="l3_initial_restore_end">Restore Finished!</string>
-    <string name="l3_initial_restore_confirm">Would you like to restore database from backup?</string>
+    <string name="l3_message_database_reset_confirm">Are you sure you want to reset the database?</string>
+    <string name="l3_message_table_reset_confirm">Are you sure you want to reset this IM-table?</string>
+    <string name="l3_message_table_download_confirm">Are you sure you want to abort the IM-table file loading?</string>
+    <string name="l3_message_table_abort_confirm">Are you sure you want to abort the IM-table file loading?</string>
+    <string name="l3_initial_download_database">Downloading preloaded database...</string>
+    <string name="l3_initial_download_failed">Database conversion failed! Please reset database and try again!</string>
+    <string name="l3_initial_backup_database">Backup DB</string>
+    <string name="l3_initial_backup_start">Starting lime database backup task...</string>
+    <string name="l3_initial_backup_end">Backup database task finished.</string> 
+    <string name="l3_initial_backup_confirm">Are you sure you want to backup lime database?</string>
+    <string name="l3_initial_backup_error">No database to backup! Please initialized database first!</string>
+    <string name="l3_initial_restore_database">Restore DB</string>
+    <string name="l3_initial_restore_error">Backup not found!</string>
+    <string name="l3_initial_restore_start">Starting lime database restore task...</string>
+    <string name="l3_initial_restore_end">Restore database task finished.</string>
+    <string name="l3_initial_restore_confirm">Are you sure you want to restore lime database from backup?</string>
     
-    <string name="l3_im_setting_select_keyboard">Please choice keyboard display</string>
-    <string name="l3_im_setting_back">Back To Previous Page</string>
-    <string name="l3_im_setting_title">Mapping Setting</string>
+    <string name="l3_im_setting_select_keyboard">On-screen soft keyboard</string>
+    <string name="l3_im_setting_back">Go back..</string>
+    <string name="l3_im_setting_title">table settings</string>
     <string name="l3_im_setting_source">Source: </string>
     <string name="l3_im_setting_keyboard">Keyboard: </string>
     <string name="l3_im_setting_version">Version: </string>
-    <string name="l3_im_setting_total_amount">Total Amount: </string>
-    <string name="l3_im_setting_import_date">Import Status: </string>
-    <string name="l3_im_setting_button_load">LOAD .LIME</string>
-    <string name="l3_im_setting_button_reset">RESET TABLE</string>
-    <string name="l3_im_setting_button_select">SELECT KEYBOARD</string>
+    <string name="l3_im_setting_total_amount">Total Mappings: </string>
+    <string name="l3_im_setting_import_date">Last import:  </string>
+    <string name="l3_im_setting_button_load">Load table (.lime/.cin)</string>
+    <string name="l3_im_setting_button_reset">Reset table</string>
+    <string name="l3_im_setting_button_select">Select keyboard</string>
     
-    <string name="l3_im_download_from_dayi">Download/Install OpenVanilla DAYI</string>
-    <string name="l3_im_download_from_dayi_start">Start download OpenVanilla DAYI</string>
-    <string name="l3_im_download_from_dayi_install">Start Install OpenVanilla DAYI</string>
+    <string name="l3_im_download_from_dayi">Download/Import OpenVanilla DAYI table</string>
+    <string name="l3_im_download_from_dayi_start">Downloading OpenVanilla DAYI table</string>
+    <string name="l3_im_download_from_dayi_install">Importing OpenVanilla DAYI table</string>
     
-    <string name="l3_im_download_from_phonetic">Download/Install OpenVanilla Phonetic</string>
-    <string name="l3_im_download_from_phonetic_start">Start download OpenVanilla Phonetic</string>
-    <string name="l3_im_download_from_phonetic_install">Start Install OpenVanilla Phonetic</string>
+    <string name="l3_im_download_from_phonetic">Download/Import OpenVanilla Phonetic table</string>
+    <string name="l3_im_download_from_phonetic_start">Downloading OpenVanilla Phonetic table</string>
+    <string name="l3_im_download_from_phonetic_install">Importing OpenVanilla Phonetic table</string>
     
-    <string name="l3_im_download_from_phonetic_adv">Download/Install Phonetic Advance</string>
-    <string name="l3_im_download_from_phonetic_adv_start">Start Download Phonetic Advance</string>
-    <string name="l3_im_download_from_phonetic_adv_install">Start Install Phonetic Advance</string>
-    <string name="l3_im_download_from_phonetic_adv_warning">File size is big, so it will take several minutes to finish the import task.</string>
+    <string name="l3_im_download_from_phonetic_adv">Download/Import Phonetic QP/LD table (large)</string>
+    <string name="l3_im_download_from_phonetic_adv_start">Downloading Phonetic  QP/LD table...</string>
+    <string name="l3_im_download_from_phonetic_adv_install">Importing Phonetic  QP/LD table...</string>
+    <string name="l3_im_download_from_phonetic_adv_warning">The table size is large. It may take more than 10 minutes to finish importing the table.</string>
     
-    <string name="l3_im_download_from_cj">Download/Install CJ</string>
-    <string name="l3_im_download_from_cj_start">Start download CJ</string>
-    <string name="l3_im_download_from_cj_install">Start Install CJ</string>
+    <string name="l3_im_download_from_cj">Download/Import CJ table</string>
+    <string name="l3_im_download_from_cj_start">Downloading CJ table</string>
+    <string name="l3_im_download_from_cj_install">Importing CJ table</string>
     
-    <string name="l3_im_download_from_scj">Download/Install SCJ</string>
-    <string name="l3_im_download_from_scj_start">Start download SCJ</string>
-    <string name="l3_im_download_from_scj_install">Start Install SCJ</string>
+    <string name="l3_im_download_from_scj">Download/Import SCJ table</string>
+    <string name="l3_im_download_from_scj_start">Downloading SCJ table</string>
+    <string name="l3_im_download_from_scj_install">Importing SCJ table</string>
     
-    <string name="l3_im_download_from_cj5">Download/Install CJ5</string>
-    <string name="l3_im_download_from_cj5_start">Start download CJ5</string>
-    <string name="l3_im_download_from_cj5_install">Start Install CJ5</string>
+    <string name="l3_im_download_from_cj5">Download/Import CJ5 table</string>
+    <string name="l3_im_download_from_cj5_start">Downloading CJ5 table</string>
+    <string name="l3_im_download_from_cj5_install">Importing CJ5 table</string>
     
-    <string name="l3_im_download_from_ecj">Download/Install ECJ</string>
-    <string name="l3_im_download_from_ecj_start">Start download ECJ</string>
-    <string name="l3_im_download_from_ecj_install">Start Install ECJ</string>
+    <string name="l3_im_download_from_ecj">Download/Import ECJ table</string>
+    <string name="l3_im_download_from_ecj_start">Downloading ECJ table</string>
+    <string name="l3_im_download_from_ecj_install">Importing ECJ table</string>
     
-    <string name="l3_im_download_from_array">Download/Install Kinfe Array</string>
-    <string name="l3_im_download_from_array_start">Start download Kinfe Array</string>
-    <string name="l3_im_download_from_array_install">Start Install Kinfe Array</string>
+    <string name="l3_im_download_from_array">Download/Import Kinfe Array table</string>
+    <string name="l3_im_download_from_array_start">Downloading Kinfe Array table</string>
+    <string name="l3_im_download_from_array_install">Importing Kinfe Array table</string>
     
-    <string name="l3_im_download_from_array10">Download/Install Kinfe Array10</string>
-    <string name="l3_im_download_from_array10_start">Start download Kinfe Array10</string>
-    <string name="l3_im_download_from_array10_install">Start Install Kinfe Array10</string>
+    <string name="l3_im_download_from_array10">Download/Import Kinfe Array10 table</string>
+    <string name="l3_im_download_from_array10_start">Downloading Kinfe Array10 table</string>
+    <string name="l3_im_download_from_array10_install">Importing Kinfe Array10 table</string>
     
-    <string name="l3_im_download_from_ez">Download/Install Eazy</string>
-    <string name="l3_im_download_from_ez_start">Start download Eazy</string>
-    <string name="l3_im_download_from_ez_install">Start Install Eazy</string>
+    <string name="l3_im_download_from_ez">Download/Import Eazy table</string>
+    <string name="l3_im_download_from_ez_start">Downloading Eazy table</string>
+    <string name="l3_im_download_from_ez_install">Importing Eazy table</string>
     
-    <string name="l3_im_download_from_wb">Download/Install Wubi</string>
-    <string name="l3_im_download_from_wb_start">Start download Wubi</string>
-    <string name="l3_im_download_from_wb_install">Start Install Wubi</string>
+    <string name="l3_im_download_from_wb">Download/Import Wubi table</string>
+    <string name="l3_im_download_from_wb_start">Downloading Wubi table</string>
+    <string name="l3_im_download_from_wb_install">Importing Wubi table</string>
     
     <string name="l3_tab_bluetooth">Bluetooth</string>
-    <string name="l3_im_notice">We are strongly recommended to remove the IM mapping which you are not using to incrase the device memory space.</string>
+    <string name="l3_im_notice">For saveing precious device memory space (both RAM and FLASH), IM-tables you are not using are strongly recommeded to be removed.</string>
     
     <!-- AD Message -->
     <string name="ad_zippy">Bluetooth keyboard experienced device\nZIPPY BT-540 Switch Instantaneously Multi-pairing Bluetooth Keyboard - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
