--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -383,11 +383,12 @@
     <string name="l3_dbservice_download_loaded">Database successfully loaded.</string>
     <string name="l3_dbservice_download_convert">Loading the database file...</string>
     
+        <string name="l3_message_table_downloading">Downloading the IM-table file ...</string>
     <string name="l3_message_database_reset_confirm">Are you sure you want to reset the database?</string>
     <string name="l3_message_table_reset_confirm">Are you sure you want to reset this IM-table?</string>
-    <string name="l3_message_table_download_confirm">Are you sure you want to abort the IM-table file loading?</string>
+    <string name="l3_message_table_download_confirm">Are you sure you want to donload the IM-table file loading?</string>
     <string name="l3_message_table_abort_confirm">Are you sure you want to abort the IM-table file loading?</string>
-    <string name="l3_initial_download_database">Downloading preloaded database...</string>
+    <string name="l3_initial_download_database">Downloading the preloaded database...</string>
     <string name="l3_initial_download_failed">Database conversion failed! Please reset database and try again!</string>
     <string name="l3_initial_backup_database">Backup DB</string>
     <string name="l3_initial_backup_start">Starting lime database backup task...</string>
