--- a/branches/limehd.gingerbread/res/values/strings.xml
+++ b/branches/limehd.gingerbread/res/values/strings.xml
@@ -404,6 +404,7 @@
     <string name="l3_message_table_abort_confirm">Are you sure you want to abort the IM-table file loading?</string>
     <string name="l3_initial_download_database">Downloading the preloaded database...</string>
     <string name="l3_initial_download_failed">Database conversion failed! Please reset database and try again!</string>
+    <string name="l3_initial_download_write_sdcard_failed">Please make sure SDCard is mounted, and then reset database and try again!</string>
     <string name="l3_initial_backup_database">Backup DB</string>
     <string name="l3_initial_backup_start">Starting lime database backup task...</string>
     <string name="l3_initial_backup_end">Backup database task finished.</string> 
