Add preference on setting font size.

--- a/limehd/res/values-zh-rCN/strings.xml
+++ b/limehd/res/values-zh-rCN/strings.xml
@@ -461,4 +461,16 @@
     <!-- AD Message -->
     <string name="ad_zippy">蓝芽键盘测试支援\nZIPPY BT-540 蓝芽一对六键盘 - http://www.zippy.com (Sam Lin/sam_lin@hotmail.com)</string>
     
+     
+    <!-- Version 3 UI and Theme String Set -->
+    <!-- Candi/Composing Font Size Options List -->
+    <string name="font_size">字型大小</string>
+	<string-array name="font_size">
+		<item>特大</item>
+		<item>大</item>
+		<item>一般</item>
+		<item>小</item>
+		<item>特小</item>
+	</string-array>
+
 </resources>
