--- a/limehd/res/values/strings.xml
+++ b/limehd/res/values/strings.xml
@@ -499,4 +499,17 @@
 		<item>0.8</item>
 	</string-array>
 	
+	<!-- Vibrate level Options List -->
+    <string name="vibrate_level">Vibrate level</string>
+	<string-array name="vibrate_level_options">
+		<item>Light</item>
+		<item>Moderate</item>
+		<item>Strong</item>
+	</string-array>
+	<string-array name="vibrate_level_values">
+		<item>20</item>
+		<item>40</item>
+		<item>60</item>
+	</string-array>
+	
 </resources>
