--- a/limehd/res/values-zh-rTW/strings.xml
+++ b/limehd/res/values-zh-rTW/strings.xml
@@ -465,7 +465,8 @@
     <!-- Version 3 UI and Theme String Set -->
     <!-- Candi/Composing Font Size Options List -->
     <string name="font_size">字型大小</string>
-	<string-array name="font_size_options">
+    <string name="keyboard_size">鍵盤大小</string>
+	<string-array name="five_size_scale_options">
 		<item>特大</item>
 		<item>大</item>
 		<item>一般</item>
